data/derived/fa15/progs/unify/prog2974.ml.out
Characters 110-124:
  let seen' = if!(List.mem = h) then h::seen else seen in
                 ^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a ref
